feat: [CDS-80941]: Add support for expressions in  v1 plan creator for custom stage (#53866)
* feat: [CDS-80941]: Add support for expressions in  v1 plan creator for custom stage

* ifeat: [CDS-80941]: fix pipeline execution errors

* feat: [CDS-80941]: fix codestyle

* feat: [CDS-80941]: minor changes

* feat: [CDS-80941]: fix codestyle

* feat: [CDS-80941]: fix codestyle

* feat: [CDS-80941]: added support for type and spec in expressions

* feat: [CDS-80941]: review comments

* feat: [CDS-80941]: review comments

* feat: [CDS-80941]: review comments

* feat: [CDS-80941]: rebased

* feat: [CDS-80941]: revert changes to StepSpecTypeConstantsV1

* feat: [CDS-80941]: tests fix

* feat: [CDS-80941]: tests fix

* feat: [CDS-80941]: Created generic variable creator for v1 pipelines

* feat: [CDS-80941]: added support for labels exp in stages