@@ -5,18 +5,20 @@
  * https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.
  */
 
-package io.harness.pms.sdk.core.pipeline.variables.v1;
+package io.harness.plancreator;
 
+import static io.harness.pms.yaml.YAMLFieldNameConstants.STAGE;
 import static io.harness.pms.yaml.YAMLFieldNameConstants.STEP;
 
 import io.harness.annotations.dev.HarnessTeam;
 import io.harness.annotations.dev.OwnedBy;
 import io.harness.data.structure.EmptyPredicate;
-import io.harness.plancreator.steps.v1.AbstractStepNodeV1;
+import io.harness.plancreator.steps.v1.DummyNodeV1;
 import io.harness.pms.sdk.core.variables.beans.VariableCreationContext;
 import io.harness.pms.sdk.core.variables.beans.VariableCreationResponse;
 import io.harness.pms.sdk.core.variables.v1.ChildrenVariableCreatorV1;
 import io.harness.pms.yaml.YamlField;
+import io.harness.steps.StepSpecTypeConstantsV1;
 
 import java.util.Collections;
 import java.util.LinkedHashMap;
@@ -24,16 +26,23 @@ import java.util.Map;
 import java.util.Set;
 
 @OwnedBy(HarnessTeam.PIPELINE)
-public abstract class GenericStepVariableCreatorV1<T extends AbstractStepNodeV1> extends ChildrenVariableCreatorV1<T> {
-  public abstract Set<String> getSupportedStepTypes();
+public class EmptyVariableCreatorV1 extends ChildrenVariableCreatorV1<DummyNodeV1> {
+  public Set<String> getSupportedStepTypes() {
+    return Set.of(StepSpecTypeConstantsV1.HTTP);
+  }
+
+  public Set<String> getSupportedStageTypes() {
+    return Set.of(StepSpecTypeConstantsV1.CUSTOM_STAGE);
+  }
 
   @Override
   public Map<String, Set<String>> getSupportedTypes() {
     Set<String> stepTypes = getSupportedStepTypes();
-    if (EmptyPredicate.isEmpty(stepTypes)) {
+    Set<String> stageTypes = getSupportedStageTypes();
+    if (EmptyPredicate.isEmpty(stepTypes) && EmptyPredicate.isNotEmpty(stageTypes)) {
       return Collections.emptyMap();
     }
-    return Collections.singletonMap(STEP, stepTypes);
+    return Map.of(STEP, stepTypes, STAGE, stageTypes);
   }
 
   @Override
@@ -50,12 +59,12 @@ public abstract class GenericStepVariableCreatorV1<T extends AbstractStepNodeV1>
 
   @Override
   public LinkedHashMap<String, VariableCreationResponse> createVariablesForChildrenNodesV2(
-      VariableCreationContext ctx, T config) {
+      VariableCreationContext ctx, DummyNodeV1 config) {
     return createVariablesForChildrenNodes(ctx, ctx.getCurrentField());
   }
 
   @Override
-  public VariableCreationResponse createVariablesForParentNodeV2(VariableCreationContext ctx, T config) {
+  public VariableCreationResponse createVariablesForParentNodeV2(VariableCreationContext ctx, DummyNodeV1 config) {
     return VariableCreationResponse.builder().build();
   }
 }
